# cm-agents

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Agents_v2.md  CHANGELOG.md  CONTEXT7_MCP_SETUP.md  DOCKER.md  Dockerfile  LICENSE  PROJECT_CONTEXT.md  README.md  WARP.md  docker-compose.yml  pyproject.toml  run_campaign.py  test-campaign-plan.json  test-campaign.json  test-plan.json  test_campaign.py  test_docker.py  test_e2e.py
brands/mi-marca/: brand.json
brands/resto-mario/: brand.json
brands/resto-mario/fonts/: .gitkeep
knowledge/: copy_templates.json  design_2026.json  industry_insights.json  marketing_calendar.json
src/cm_agents/: __init__.py  __main__.py  cli.py  pipeline.py  styles.py
src/cm_agents/agents/: __init__.py  architect.py  base.py  brand_translator.py  creative_engine.py  designer.py  extractor.py  generator.py  strategist.py
src/cm_agents/api/: __init__.py  config.py  main.py  schemas.py  security.py
src/cm_agents/models/: __init__.py  brand.json.schema  brand.py  campaign.py  campaign_plan.py  campaign_style.py  (+3 more)
templates/: brand_template.json  campaign_template.json
templates/prompts/: architect.json  design_templates.json  extractor.json  generator.json  text_overlay.json
tests/: conftest.py  test_agents_unit.py  test_api.py  test_base.py  test_brand_translator.py  test_campaign_pipeline.py  test_cli_commands.py  test_creative_engine.py  test_designer_composition.py  test_orchestrator_e2e.py  test_pipeline_integration.py  test_security.py  test_strategist.py
ui/: .dockerignore  AGENTS.md  Dockerfile  package.json
(+35 files in other folders)
